class AppTexts {
  static const appName = "Fitness Magic";
  static const exercise = "Exercise";
  static const exercises = "Exercises";
  static const choose = "Choose";
  static const selectExercise = "Select Exercise";
  static const selectWeight = "Select Weight";
  static const setsCount = "Sets Count";
  static const weightCount = "Weight Count";
  static const setsRepetition = "Sets Repetition";
  static const save = "Save";
  static const delete = "Delete";
  static const exerciseSaved = "Exercise Saved!";
  static const sthWentWrong = "Something went wrong! Try Again!";
  static const exerciseName = "Exercise Name";
  static const weight = "Weight";
  static const addExercise = "Add Exercise";
}
