...
          padding: EdgeInsets.symmetric(vertical: AppSpacing.spacingSmall.h, horizontal: AppSpacing.spacingMedium.w),
          child: vm.errorMessage != null
              ? Center(child: Text(vm.errorMessage!, style: context.textTheme.bodyText1))
              : Column(
                  children: [
                    ButtonWidget(
                      key: Key("AddButton"),
                      text: AppTexts.addExercise,
                      onPressed: () async {
                        var result = await NavigationUtil.navigateToExerciseScreen(context);
                        Fluttertoast.showToast(
                          msg: result ? AppTexts.exerciseSaved : AppTexts.sthWentWrong,
                          backgroundColor: result ? AppColors.primary : Colors.red,
...
